# weather_salvador_bahia

./: .gitignore  README.md  main.py  pyproject.toml
dags/: weather_dag.py
notebooks/: analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
